feat: minor tweaks and add report issue button

--- a/options.html
+++ b/options.html
@@ -19,6 +19,10 @@
             <button id="addOption">Add new option</button>
             <input id="submitForm" class="btn-primary" type="submit" value="Save">
         </form>
+
+        <div id="footer">
+            <a href="https://github.com/prokopsimek/google-calendar-description-prefiller/issues" target="_blank">Report issue</a>
+        </div>
     </div>
     <script src="options.js" type="text/javascript"></script>
     <script src="ckeditor.js" type="text/javascript"></script>
